# rendergraph

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README
gl_example/: CMakeLists.txt  window.cpp  window.h
sg_example/: .customitem.cpp.swp  CMakeLists.txt  customitem.cpp  customitem.h  main.cpp
shaders/: CMakeLists.txt  README  endoftrack.frag  endoftrack.frag.gl  endoftrack.vert  endoftrack.vert.gl  generate_shaders_gl.pl  generated_shaders_gl.cmake  texture.frag  texture.frag.gl  texture.vert  texture.vert.gl
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  endoftrackmaterial.cpp  endoftrackmaterial.h  examplenodes.cpp  examplenodes.h  texturematerial.cpp  texturematerial.h
src/opengl/: CMakeLists.txt  geometrynode_impl.cpp  materialshader_impl.cpp  rendergraph_impl.cpp
src/opengl/private/: attributeset_impl.h  context_impl.h  geometry_impl.h  geometrynode_impl.h  graph_impl.h  material_impl.h  materialshader_impl.h  materialtype_impl.h  node_impl.h  rendergraph_impl.h  texture_impl.h
src/rendergraph/: attribute.h  attributeset.cpp  attributeset.h  context.cpp  context.h  geometry.cpp  geometry.h  geometrynode.cpp  geometrynode.h  graph.cpp  graph.h  material.cpp  material.h  materialshader.cpp  materialshader.h  materialtype.cpp  materialtype.h  node.cpp  node.h  rendergraph.cpp  rendergraph.h  texture.cpp  texture.h  types.cpp  uniform.h  uniformscache.cpp  uniformscache.h  uniformset.cpp  uniformset.h
src/rendergraph/opengl/: CMakeLists.txt
src/rendergraph/opengl/private/: geometry_impl.h  materialshader_impl.h  texture_impl.h
src/rendergraph/scenegraph/: CMakeLists.txt  materialshader_impl.cpp
src/rendergraph/scenegraph/private/: attributeset_impl.h  geometry_impl.h
src/scenegraph/: CMakeLists.txt  materialshader_impl.cpp  rendergraph_impl.cpp  scenegraph.cpp  scenegraph.h  texture_impl.cpp
src/scenegraph/private/: attributeset_impl.h  context_impl.h  geometry_impl.h  geometrynode_impl.h  graph_impl.h  helper.h  material_impl.h  materialshader_impl.h  materialtype_impl.h  node_impl.h  rendergraph_impl.h  texture_impl.h
