add_library(rendergraph_gl
    geometrynode_impl.cpp
    materialshader_impl.cpp
    private/attributeset_impl.h
    private/context_impl.h
    private/geometry_impl.h
    private/geometrynode_impl.h
    private/graph_impl.h
    private/material_impl.h
    private/materialshader_impl.h
    private/materialtype_impl.h
    private/node_impl.h
    private/texture_impl.h
    ../rendergraph/attributeset.cpp
    ../rendergraph/context.cpp
    ../rendergraph/geometry.cpp
    ../rendergraph/geometrynode.cpp
    ../rendergraph/graph.cpp
    ../rendergraph/material.cpp
    ../rendergraph/materialshader.cpp
    ../rendergraph/materialtype.cpp
    ../rendergraph/node.cpp
    ../rendergraph/texture.cpp
    ../rendergraph/types.cpp
    ../rendergraph/uniformscache.cpp
    ../rendergraph/uniformset.cpp
    ../rendergraph/attribute.h
    ../rendergraph/attributeset.h
    ../rendergraph/context.h
    ../rendergraph/geometry.h
    ../rendergraph/geometrynode.h
    ../rendergraph/graph.h
    ../rendergraph/material.h
    ../rendergraph/materialshader.h
    ../rendergraph/materialtype.h
    ../rendergraph/node.h
    ../rendergraph/texture.h
    ../rendergraph/types.h
    ../rendergraph/uniform.h
    ../rendergraph/uniformscache.h
    ../rendergraph/uniformset.h
)

target_link_libraries(rendergraph_gl PUBLIC
    Qt6::Core
    Qt6::Gui
    Qt6::OpenGL
)

target_include_directories(rendergraph_gl PUBLIC .. PRIVATE private)
